--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+GarciaVilaSergi_ENTREGA[[:space:]]FINAL[[:space:]]PROJECTE/FrontEnd/archivo_grande.zip filter=lfs diff=lfs merge=lfs -text
+GarciaVilaSergi_ENTREGA[[:space:]]FINAL[[:space:]]PROJECTE/FrontEnd/ filter=lfs diff=lfs merge=lfs -text
