--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 * text=auto
 GarciaVilaSergi_ENTREGA[[:space:]]FINAL[[:space:]]PROJECTE/FrontEnd/archivo_grande.zip filter=lfs diff=lfs merge=lfs -text
 GarciaVilaSergi_ENTREGA[[:space:]]FINAL[[:space:]]PROJECTE/FrontEnd/ filter=lfs diff=lfs merge=lfs -text
+GarciaVilaSergi_ENTREGA_FINAL_PROJECTE/FrontEnd/ filter=lfs diff=lfs merge=lfs -text
